Se agregaro funciones que permiten traer los avatares del total de usuarios que existen en la data, así como botones para ir de una página a otra, cambiando con ello tanto el porcentaje como los avatares que se muestran según la página en la que se encuentra. Se relizó un cambio en el services para incluir la paginación, por lo que se construyó la query necesaria.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@componentes/*": ["./*"]
+      "@componentes/*": ["./*"],
+      "@services/*": ["../*"],
+      "@util/*": ["../*"]
     }
   }
 }
